@@ -90,6 +90,10 @@ public class LinkUtil {
 	 */
 	public static String buildImageLinkHtml(String context, String virtualWiki, String topicName, boolean frame, boolean thumb, String align, String caption, int maxDimension, boolean suppressLink, String style, boolean escapeHtml) throws Exception {
 		Topic topic = WikiBase.getHandler().lookupTopic(virtualWiki, topicName);
+		if (topic == null) {
+			WikiLink uploadLink = LinkUtil.parseWikiLink("Special:Upload");
+			return LinkUtil.buildInternalLinkHtml(context, virtualWiki, uploadLink, topicName, "edit", true);
+		}
 		WikiFile wikiFile = WikiBase.getHandler().lookupWikiFile(virtualWiki, topicName);
 		if (topic.getTopicType() == Topic.TYPE_FILE) {
 			// file, not an image
